--- a/larry2.html
+++ b/larry2.html
@@ -107,9 +107,11 @@
         }
 
         .product-item img {
-            width: 300px;
-            height: 300px;
-            object-fit: cover;
+            width: 100%;
+            height: auto;
+            display: block;
+            object-fit: contain;
+        background-color: black;
         }
 
         .product-info {
@@ -221,7 +223,7 @@
             <nav class="navbar">
                 <ul>
                     <li><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" /></li>
-                    <li><a href="Larry.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="larry2.html">Products</a></li>
                     <li><a href="Larry7.html">About</a></li>
                     <span class="material-symbols-outlined">favorite</span>
@@ -238,7 +240,8 @@
                             <h3>Luxury Wig 1</h3>
                             <p>High-quality human hair wig, perfect for any occasion.</p>
                             <p class="price">R1200</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+                        
                         </div>
                     </div>
                     <div class="product-item">
@@ -247,7 +250,8 @@
                             <h3>Luxury Wig 2</h3>
                             <p>Stylish frontal wig with a natural look.</p>
                             <p class="price">R1400</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+                           
                         </div>
                     </div>
                     <div class="product-item">
@@ -256,7 +260,8 @@
                             <h3>Luxury Wig 3</h3>
                             <p>Long-lasting and easy-to-maintain wig.</p>
                             <p class="price">R1000</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                     <div class="product-item">
@@ -265,7 +270,8 @@
                             <h3>Luxury Wig 4</h3>
                             <p>Perfect for elegant and everyday styles.</p>
                             <p class="price">R1500</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                     <div class="product-item">
@@ -274,7 +280,8 @@
                             <h3>Luxury Wig 1</h3>
                             <p>High-quality human hair wig, perfect for any occasion.</p>
                             <p class="price">R1200</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                     <div class="product-item">
@@ -283,7 +290,8 @@
                             <h3>Luxury Wig 2</h3>
                             <p>Stylish frontal wig with a natural look.</p>
                             <p class="price">R1400</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                     <div class="product-item">
@@ -292,7 +300,8 @@
                             <h3>Luxury Wig 3</h3>
                             <p>Long-lasting and easy-to-maintain wig.</p>
                             <p class="price">R1000</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                     <div class="product-item">
@@ -301,7 +310,8 @@
                             <h3>Luxury Wig 4</h3>
                             <p>Perfect for elegant and everyday styles.</p>
                             <p class="price">R1500</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                 </div>
@@ -312,7 +322,8 @@
                             <h3>Luxury Wig 1</h3>
                             <p>High-quality human hair wig, perfect for any occasion.</p>
                             <p class="price">R1200</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                     <div class="product-item">
@@ -321,7 +332,8 @@
                             <h3>Luxury Wig 2</h3>
                             <p>Stylish frontal wig with a natural look.</p>
                             <p class="price">R1400</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                     <div class="product-item">
@@ -330,7 +342,8 @@
                             <h3>Luxury Wig 3</h3>
                             <p>Long-lasting and easy-to-maintain wig.</p>
                             <p class="price">R1000</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                     <div class="product-item">
@@ -339,7 +352,8 @@
                             <h3>Luxury Wig 4</h3>
                             <p>Perfect for elegant and everyday styles.</p>
                             <p class="price">R1500</p>
-                            <button>Add to Cart</button>
+                            <button>Add to cart</button>
+
                         </div>
                     </div>
                 </div>
