--- a/Larry7.html
+++ b/Larry7.html
@@ -177,7 +177,7 @@
     <nav class="navbar">
         <ul>
             <li><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" /></li>
-            <li><a href="Larry.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="larry2.html">Products</a></li>
             <li><a href="Larry7.html">About</a></li>
             <span class="material-symbols-outlined">favorite</span>
